--- a/sherpa-onnx/src/main/AndroidManifest.xml
+++ b/sherpa-onnx/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
         <activity
-            android:name="com.android.klaudiak.sherpa.onnx.SherpaOnnxActivity"
+            android:name="com.android.klaudiak.sherpa_onnx.SherpaOnnxActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
