--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,8 +20,7 @@ materialIconsExtended = "1.7.8"
 media3Common = "1.5.1"
 media3Exoplayer = "1.5.1"
 media3Ui = "1.5.1"
-profileinstaller = "1.4.1"
-profileinstallerVersion = "1.4.1"
+profileinstaller = "1.4.0-alpha02"
 uiautomator = "2.3.0"
 benchmarkMacroJunit4 = "1.3.3"
 uiTestJunit4Android = "1.7.8"
@@ -41,7 +40,6 @@ androidx-media3-common = { module = "androidx.media3:media3-common", version.ref
 androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Exoplayer" }
 androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Ui" }
 androidx-profileinstaller = { module = "androidx.profileinstaller:profileinstaller", version.ref = "profileinstaller" }
-androidx-profileinstaller-v130alpha02 = { module = "androidx.profileinstaller:profileinstaller", version.ref = "profileinstallerVersion" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidCompiler" }
 hilt-android-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hiltAndroidGradlePlugin" }
