--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" tools:node="replace" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:node="replace" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="replace" />
 
     <application
         android:name=".STTLabApp"
@@ -32,21 +33,8 @@
             </intent-filter>
         </activity>
 
-        <activity
+<!--        <activity
             android:name="com.android.klaudiak.sherpa_onnx.onnx.SherpaOnnxActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-   <!--     <activity
-            android:name="com.android.klaudiak.sherpa_ncnn.SherpaNcnnActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -59,7 +47,20 @@
                 android:value="" />
         </activity>-->
         <activity
-            android:name="com.android.klaudiak.vosk_stt.STTVoskActivity"
+            android:name="com.android.klaudiak.sherpa_ncnn.SherpaNcnnActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.android.klaudiak.vosk_stt.VoskActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,7 +68,7 @@
             </intent-filter>
         </activity>
 
-        <receiver
+   <!--     <receiver
             android:name="androidx.profileinstaller.ProfileInstallReceiver"
             android:permission="android.permission.DUMP"
             android:exported="true">
@@ -75,7 +76,7 @@
                 <action
                     android:name="androidx.profileinstaller.action.BENCHMARK_OPERATION" />
             </intent-filter>
-        </receiver>
+        </receiver>-->
     </application>
 
 </manifest>
